cabal-version: 2.4

name:          reflex-host
version:       0.3
license:       BSD-3-Clause
license-file:  LICENSE
author:        Benno Fünfstück
maintainer:    Benno Fünfstück <benno.fuenfstueck@gmail.com>
stability:     experimental
homepage:      http://github.com/bennofs/reflex-host/
bug-reports:   http://github.com/bennofs/reflex-host/issues
copyright:     Copyright (C) 2014 Benno Fünfstück
synopsis:      Implementation support for reflex frameworks
description:
  The reflex FRP library's functions for implementing a framework are quite lowlevel.
  This library provides higher-level support for on top of the basic functions from reflex.
  It provides a monad with support for external event sources and performing IO actions in response to events.
category:      FRP, Reflex
build-type:    Simple
tested-with:   GHC == 8.6.5, GHC == 8.4.4

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.md

source-repository head
  type: git
  location: https://github.com/bennofs/reflex-host.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  build-depends:
      base >= 4.10.1.0 && < 4.13
    , containers
    , reducers >= 3.11
    , mtl
    , reflex >= 0.6 && <0.7
    , dlist
    , dependent-sum
    , transformers
    , stateWriter
  exposed-modules:
    Reflex.Host.App
    Reflex.Host.App.Internal